--- a/src/style.css
+++ b/src/style.css
@@ -62,7 +62,7 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding: 0px 0px;
+    padding: 30px;
     border: 1px solid black;
 }
 
@@ -81,4 +81,12 @@ body {
     width: 110px;
     height: 110px;
     visibility: hidden;
+}
+
+#loading-div{
+    justify-content: center;
+    align-items: center;
+    margin: 30px 50vw;
+    width: 50%;
+    height: 50%;
 }
